# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.413 2005/10/09 20:27:41 agaffney Exp $

*GLI-0.3 (5 Oct 2005)

  9 Oct 2005; Preston Cody <codeman@gentoo.org>
  GenDialog: string formatting and yes/no label fixes.
  added WebGLI template for gliserv.py
  added WebGLIHandler as well as a definition for it in gliserv.py
  updates to the webgli files even though they won't be there for long.
  
  9 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  override dict to not be so anal
  main server now loads separate module to handle requests
  src/net/server/handlers/ProfileHandler.py, src/net/server/handler.py:
  split out profile URLs into separate handler function
  move handlers into subdirectory
  add Welcome and Clients handlers

*GLI-0.2 (5 Oct 2005)

  5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  raise exception if password prompt received twice

  2 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  removed rot13ify()

  1 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  allow for param to be passed multiple times in GET
  no XMLRPC functions return None
  modify POST request parsing to only create a list if needed
  fix GET request parsing so the list creation for multiple values works
  src/net/client/gliclient.py:
  various typo and type mismatch fixes
  exit after exception

  30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/client/gliclient.py:
  initial commit
  pass MAC to XMLRPC functions
  src/net/server/GLIServerProfile.py:
  rename GLIClientsProfiles to GLIServerProfile

  29 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  now handles POST requests
  move majority of request handling code to common_handler() to reduce code
  duplication
  profile loading
  client reg via XMLRPC goes into SharedInfo()