@@ -8,7 +8,7 @@
 
 <table cellpadding="0" cellspacing="5">
 	<tr>
-		<td width=200>Picture here. Gentoo Logo</td><td><img src="banner-800x64.png">
+		<td width=150>Picture here. Gentoo Logo</td><td><img src="/banner-800x64.png">
 		</td>
 	</tr>
 	<tr>
