@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.413 2005/10/09 20:27:41 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.414 2005/10/09 21:51:29 codeman Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
@@ -10,6 +10,8 @@
   added WebGLI template for gliserv.py
   added WebGLIHandler as well as a definition for it in gliserv.py
   updates to the webgli files even though they won't be there for long.
+  Utility: remove exception for non-existant grppkgs.txt until the new livecd
+    goes public.
   
   9 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
